Sam code review